# nlp_for_beginners

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: blogpost.py  blogpost_title.py  generator.py  title.py
