[tool.poetry]
name = "+"
version = "0.1.0"
description = ""
authors = ["Robert Meissner <robert.meissner@codecentric.de>"]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.5.1"
setuptools = "^65.4.1"
trafilatura = "^1.3.0"
openai = "^0.23.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
